# challenge_predicting_heart_disease-Gandalf-Le-Gris

./: pyproject.toml
notebooks/: notebook_kaggle  notebook_kaggle.ipynb
src/: eda.py  ensemble.py  features.py  models.py  pseudo_labeling.py  train.py  tune_optuna.py
