[project]
name = "chalenge-predicting-heart-disease"
version = "0.1.0"
description = "Prediction of heart disease"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "xgboost",
    "lightgbm",
    "catboost",
    "autogluon",
    "tabpfn",
    "optuna",
    "seaborn",
    "jupyter",
]
